[project]
name = "proueb_2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sophia2710", email = "os4913@mci4me.at"},
]
dependencies = ["numpy>=2.2.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
